# pysz

./: .gitignore  Dockerfile  LICENSE.txt  MANIFEST.in  README.md  copyright-and-BSD-license.txt  docker-compose.yml  pyproject.toml  setup.py  szSetup.py  testdouble_8_8_128.dat.sz
.github/workflows/: publish.yml
pysz/: __init__.py  compress.pxd  compress.pyx  pyConfig.pxd  pyConfig.pyx  sz.pxd  sz.pyx
test/: sz3.config  test.py  testdouble_8_8_128.dat.sz  testdouble_8_8_128.dat.sz.out
